Fix for overlapping ESH link on Configure page

--- a/web/src/main/resources/public/style/core.css
+++ b/web/src/main/resources/public/style/core.css
@@ -6293,6 +6293,7 @@ img {
 body .main-contents .header-container {
 	position: relative;
 	padding-bottom: 0px;
+    z-index: 901;
 }
 
 .site-labeling {
